--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9a8e4">  <td>19/05/01 15:27:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.shutDownTest()[pri:0, instance:com.guru99.model.tests.CatalogTest@291b4bf5]">&lt;&lt;shutDownTest</td> 
+<tr bgcolor="a9a8e4">  <td>19/05/03 15:48:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.shutDownTest()[pri:0, instance:com.guru99.model.tests.SalesInvoicesTest@291b4bf5]">&lt;&lt;shutDownTest</td> 
 <td>&nbsp;</td>  <td>main@225344427</td>   <td></td> </tr>
-<tr bgcolor="a9a8e4">  <td>19/05/01 15:25:50</td>   <td>-73977</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.startUpTest()[pri:0, instance:com.guru99.model.tests.CatalogTest@291b4bf5]">&gt;&gt;startUpTest</td> 
+<tr bgcolor="a9a8e4">  <td>19/05/03 15:48:29</td>   <td>-20093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.startUpTest()[pri:0, instance:com.guru99.model.tests.SalesInvoicesTest@291b4bf5]">&gt;&gt;startUpTest</td> 
 <td>&nbsp;</td>  <td>main@225344427</td>   <td></td> </tr>
-<tr bgcolor="6cb0bc">  <td>19/05/01 15:26:00</td>   <td>-63993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CatalogTest.verifyProductReviewMechanism()[pri:0, instance:com.guru99.model.tests.CatalogTest@291b4bf5]">verifyProductReviewMechanism</td> 
+<tr bgcolor="6cb0bc">  <td>19/05/03 15:48:41</td>   <td>-8076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SalesInvoicesTest.verifySortingSalesInvoicesDate()[pri:0, instance:com.guru99.model.tests.SalesInvoicesTest@291b4bf5]">verifySortingSalesInvoicesDate</td> 
   <td>main@225344427</td>   <td></td> </tr>
 </table>
